<resources>
    <string name="app_name">TapShop</string>
    <string name="tapshop_title">TapShop</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="forgot_pass_text">Forgot Password</string>
    <string name="fb_login_desc">facebook login button</string>
    <string name="g_login_desc">google login button</string>
    <string name="login_screen_title">login screen title</string>
    <string name="new_user">New User</string>
    <string name="g_signin_desc">google sign in button</string>
    <string name="email_text">Email</string>
    <string name="register_text">Register</string>
    <string name="retype_the_password">Retype the password</string>
    <string name="web_client_id">606156716264-4bgfrmgn61ggiihr91j8enc26j0msp5b.apps.googleusercontent.com</string>
    <string name="skip">Skip</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="next">Next</string>
</resources>