<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <ImageView
            android:contentDescription="@string/login_screen_title"
            app:srcCompat="@drawable/title"
            android:layout_width="220dp"
            android:layout_height="91dp"
            android:id="@+id/title"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.497"/>
    <com.google.android.material.card.MaterialCardView
            android:id="@+id/login_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:cardElevation="6dp"
            android:outlineSpotShadowColor="#aaa"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.CardView">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="30dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/username_text"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/username_layout"
                    app:startIconTint="@color/primary"
                    app:startIconDrawable="@drawable/ic_person_black_24dp"
                    app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/password_text"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:startIconDrawable="@drawable/ic_lock_black_24dp"
                    app:startIconTint="@color/primary"
                    app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:padding="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:backgroundTint="@color/primary_light"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="1dp"
                    android:textSize="25sp"
                    app:cornerRadius="10dp"
                    android:textStyle="bold"
                    app:rippleColor="@color/primary"
                    android:textColor="@color/primary_dark"/>

            <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/forgot_pass_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass_text"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/grey"
            app:rippleColor="@color/light_grey"
            app:layout_constraintStart_toStartOf="@id/login_card"
            app:layout_constraintTop_toBottomOf="@id/login_card"
    />
    <com.google.android.material.button.MaterialButton

            android:id="@+id/new_user_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rippleColor="@color/light_grey"
            android:text="@string/new_user"
            android:layout_marginEnd="20dp"
            android:textSize="12sp"
            android:textColor="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/login_card"
            app:layout_constraintRight_toRightOf="@id/login_card"
    />
  </androidx.constraintlayout.widget.ConstraintLayout>