<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pp_image_view"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/defaultpic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:civ_border_color="#fff"
            app:civ_border_width="1dp"
            android:elevation="10dp"
            android:outlineSpotShadowColor="#37000000"
            app:layout_constraintBottom_toTopOf="@+id/upload_pp_gallery_button"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_pp_gallery_button"
            android:padding="30dp"
            android:backgroundTint="@color/primary_light"
            app:rippleColor="@color/primary"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_from_gallery"
            android:textColor="@color/primary_dark"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/upload_pp_camera_button"
            app:layout_constraintEnd_toEndOf="@+id/pp_image_view"
            app:layout_constraintStart_toStartOf="@+id/pp_image_view"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_pp_camera_button"
            android:backgroundTint="@color/primary_light"
            android:padding="30dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:rippleColor="@color/primary"
            android:textColor="@color/primary_dark"
            android:text="@string/take_photo"
            android:layout_marginBottom="70dp" app:layout_constraintBottom_toTopOf="@+id/skip_button"
            app:layout_constraintEnd_toEndOf="@+id/upload_pp_gallery_button"
            app:layout_constraintStart_toStartOf="@+id/upload_pp_gallery_button"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_button"
            android:padding="4dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@color/grey"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/upload_pp_camera_button"
            app:layout_constraintStart_toStartOf="@+id/upload_pp_camera_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>