<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:gravity="center_horizontal">

    <TextView
            android:id="@+id/new_user_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/secondary"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/register_card"
    />

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/register_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:cardElevation="6dp"
            android:outlineSpotShadowColor="#aaa"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/new_user_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.CardView">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="30dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/username_text"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/username_layout"
                    app:startIconTint="@color/primary"
                    app:startIconDrawable="@drawable/ic_person_black_24dp"
                    app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="Email"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:startIconDrawable="@drawable/ic_lock_black_24dp"
                    app:startIconTint="@color/primary"
                    app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/password_text"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:startIconDrawable="@drawable/ic_lock_black_24dp"
                    app:startIconTint="@color/primary"
                    app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/re_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="Retype the password"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:startIconDrawable="@drawable/ic_lock_black_24dp"
                    app:startIconTint="@color/primary"
                    app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/re_password_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_button"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:padding="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    android:backgroundTint="@color/primary_light"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="1dp"
                    android:textSize="25sp"
                    app:cornerRadius="10dp"
                    android:textStyle="bold"
                    app:rippleColor="@color/primary"
                    android:textColor="@color/primary_dark"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>